Add company info to footer

--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -65,6 +65,9 @@
 			<div class="col-lg-6">
 				<div class="footer__footer_copy text-light">
 					<p>{{ .Site.Params.copyright }}</p>
+                    <p>Registered office: {{ .Site.Params.address.address }}</p>
+                    <p>Registered in England & Wales, company number {{ .Site.Params.registrationNumber }}</p>
+                    <p>VAT number {{ .Site.Params.vatNumber }}</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
